...

        android:id="@+id/swiperefresh"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:minHeight="56dp"
            android:theme="@style/iAirToolBarStyle"
            android:visibility="visible"
...

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/layoutInfoo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
...
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textViewCityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="City"
                    android:textAlignment="viewStart"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="30sp"
...
                android:id="@+id/sendDataBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Sensor Data" />

            <ListView
                android:id="@+id/cityList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="48dp"
                tools:listitem="@layout/item_city">
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sendEventsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Send Events" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="City History" />

                    <Button
                        android:id="@+id/allHistoryBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="All History" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

...
