...
    android:orientation="vertical"
    tools:context="com.example.bruno.iair.activities.CityListActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/iAirToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat"/>

...
