...
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:clickable="true"
                    android:id="@+id/layoutEarthquake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/earthquake" />

                    <RadioButton
                        android:id="@+id/radioButtonEarthQuake"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Earthquake"
                        android:textIsSelectable="false"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="Message: " />

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="250"
...
